objects/Related_Unit__c/Related_Unit__c.object-meta.xml
<CustomObject>
    <label>Related Unit</label>
    <nameField>
        <label>Related Unit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Related Units</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>