objects/Related_Unit__c/fields/Block__c.field-meta.xml
<CustomField>
    <fullName>Block__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Block</label>
    <referenceTo>Tower__c</referenceTo>
    <relationshipLabel>Related Units</relationshipLabel>
    <relationshipName>Related_Units</relationshipName>
    <type>Lookup</type>
</CustomField>