objects/Related_Unit__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Related Units</relationshipLabel>
    <relationshipName>Related_Units</relationshipName>
    <type>Lookup</type>
</CustomField>