objects/Related_Unit__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Related Units</relationshipLabel>
    <relationshipName>Related_Units</relationshipName>
    <type>Lookup</type>
</CustomField>