objects/Related_Unit__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Related Units</relationshipLabel>
    <relationshipName>Related_Units</relationshipName>
    <type>Lookup</type>
</CustomField>