objects/Related_Unit__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Related Units</relationshipLabel>
    <relationshipName>Related_Units</relationshipName>
    <type>Lookup</type>
</CustomField>